上海市儿童医院】-【A】-儿童医院药品在复诊开方查库存的实时更新